# Projet_4BIM

./: .gitignore  IHM.py  README.md  VAE.py  algo_gen.ipynb  charger_df.ipynb  code_gen_blend.py  formulaire.ipynb  full_face.ipynb  modif_face.ipynb  modif_face_ouiam_version.ipynb  photo.py  pyproject.toml  test.py  trier_df.ipynb  trier_df_form.ipynb
src/: main.py
src/Zencoder_profiler/: .gitignore  IHM.py  autoencoder.py  code_gen_blend.py  final_dataset.txt  modif_face.ipynb  test.py
