[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Zencoder_profiler"]

[project]
name = "Zencoder_profiler"
version = "0.8.1"
authors = [
  { name="BATANGA LOKO Cyr", email="cyr.batanga-loko@insa-lyon.fr" },
  { name="ACACIA Grégory", email="gregory.acacia@insa-lyon.fr" },
  { name="DROUHIN Axel", email="axel.drouhin@insa-lyon.fr" },
  { name="EL HAJJI Ouiam", email="ouiam.el-hajji@insa-lyon.fr" },
  { name="GALLIER-JOUVE Mathis", email="mathis.gallier-jouve@insa-lyon.fr" },
  { name="CHEVALIER Eva", email="eva.chevalier@insa-lyon.fr" },
]
description = "Package de l'interface de profiling des Zencoders"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Ouiam-lhj/Projet_4BIM"
Issues = "https://github.com/Ouiam-lhj/Projet_4BIM/issues"